# bravo-api

./: .gitignore  Cargo.toml  README.md  build.rs  denotest.ts  index.html  package-lock.json  package.json  vite.config.ts
.openapi-generator/: FILES
bravo-core/: Cargo.toml
bravo-wasm/: Cargo.toml
bravo-wasm/src/: lib.rs
bravo-wasm/src/apis/: auth.rs
bravo-wasm/src/models/: send_message.rs
bravo-wasm/src/parser/: mod.rs  stream_parser.rs
bravo-wasm/src/request/: build_request.rs  mod.rs
bravo-web-sdk/: package-lock.json  package.json
bravo-web-sdk/src/: client.ts
crates/bravo-core/: .env.example
crates/bravo-wasm/: Cargo.toml
crates/bravo-wasm/src/: lib.rs
docs/: BravoChatRequest.md  BravoChatRequestGeneralPromptSelection.md  BravoChatRequestMessage.md  BravoChatRequestMessagePartsInner.md  BravoChatRequestMessagePartsInnerAnyOf.md  BravoChatRequestMessagePartsInnerAnyOf1.md  BravoChatRequestModulePromptSelectionsValue.md  ChatJsonResponse.md  ChatJsonResponseChoicesInner.md  ChatJsonResponseChoicesInnerMessage.md  ChatJsonResponseUsage.md  ChatMessagesResponse.md  ChatMessagesResponseMessagesInner.md  ChatsListResponse.md  ChatsListResponseChatsInner.md  ChatsListResponseChatsInnerMetadata.md  DefaultApi.md  DeleteChatResponse.md  ErrorEnvelope.md  ErrorEnvelopeError.md  FileUploadResponse.md  FileUploadResponseFile.md  GetModel200Response.md  ListModels200Response.md  ListModels200ResponseModelsInner.md  ListModels200ResponseModelsInnerCapabilities.md  ListModels200ResponseModelsInnerPolicy.md  OpenAiChatRequest.md  OpenAiChatRequestMessagesInner.md  OpenAiChatRequestMessagesInnerContent.md  OpenAiChatRequestMessagesInnerContentAnyOfInner.md  OpenAiChatRequestMetadata.md  PingResponse.md  PostChatRequest.md  UserContextResponse.md  UserContextResponseMetadata.md  UserContextResponsePersona.md
examples/cli/: index.ts
src/: lib.rs
src/apis/: auth.rs  configuration.rs  default_api.rs  mod.rs
(+116 files in other folders)
