[package]
name = "bravo-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
bravo-core = { path = "../bravo-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "^1.8", features = ["serde", "v4", "js"] }
reqwest = { version = "^0.13", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "query",
    "form",
] }

[lib]
crate-type = ["cdylib"]
